[package]
name = "fine_grained"
version = "0.1.1"
authors = ["Bastian Meyer <bastian@bastianmeyer.eu>"]
description = "A stopwatch with lap functionality and nanosecond resolution to time things."
repository = "https://github.com/BMeu/Fine-Grained"
readme = "README.md"
homepage = "https://docs.rs/fine_grained/"
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
time = "0.1.36"

[badges]
travis-ci = { repository = "BMeu/Fine-Grained" }
